# docxsphinx

./: .dockerignore  .gitignore  .travis.yml  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README.txt  buildout.cfg  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
docs/: roundtrip-findings.md
examples/corpus/: README.md
examples/corpus_samples/: README.md  pandoc_md_basic.docx
examples/md_admonitions/source/: conf.py  index.md
examples/md_basic/source/: conf.py  index.md
examples/md_code/source/: conf.py  index.md
examples/md_images/source/: conf.py  index.md
examples/md_links/source/: conf.py  index.md
examples/md_lists/source/: conf.py  index.md
examples/md_math/source/: conf.py  index.md
examples/md_mixed/source/: appendix_rst.rst  conf.py  index.md
examples/md_showcase/: Makefile
examples/md_showcase/source/: conf.py  index.md
examples/md_tables/source/: conf.py  index.md
examples/md_tasklist/source/: conf.py  index.md
examples/sample_1/: Makefile
examples/sample_1/source/: conf.py  index-ja.rst  index.rst
examples/sample_2/source/: conf.py  index.rst  mymodule.py
examples/sample_3/: make.bat
examples/sample_3/source/: conf.py  index.rst
examples/sample_4/: Makefile  make.bat
examples/sample_4/source/: conf.py  index.rst
examples/sample_5/source/: conf.py  index.rst  template.docx
examples/sample_6/source/: index.rst
examples/sample_autodoc/source/: conf.py  index.rst  mymodule.py
examples/sample_multi_output/source/: conf.py  index.rst  report_a.rst  report_b.rst
examples/sample_nested_toctree/: Makefile
examples/sample_nested_toctree/source/: conf.py  index.rst  section.rst  subsection.rst
examples/source/: index.rst  restructuredtext.rst
src/: LICENSE.txt  README.md  README.txt  TODO.txt
src/docxsphinx/: __init__.py  _compat.py  _docx_helpers.py  builder.py  writer.py
src/docxsphinx.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/docxsphinx/docx/: __init__.py  docx.py  sdocx.py
src/docxsphinx/docx/docx-template/: [Content_Types].xml
src/docxsphinx/docx/docx-template/word/: fontTable.xml  numbering.xml  settings.xml  styles.xml
src/docxsphinx/docx/docx-template/word/_rels/: document.xml.rels
src/docxsphinx/reverse/: __init__.py  cli.py  engine.py
src/docxsphinx/sdocx/: __init__.py  sdocx.py
src/docxsphinx/sdocx/docx-template/docProps/: app.xml  core.xml
src/docxsphinx/sdocx/docx-template/word/: document.xml  endnotes.xml  footer1.xml  footer2.xml  footnotes.xml  webSettings.xml
src/docxsphinx/sdocx/docx-template/word/_rels/: document.xml.rels  settings.xml.rels
src/docxsphinx/sdocx/docx-template/word/theme/: theme1.xml
src/docxsphinx/tests/: test_pep8.py
tests/: _fingerprint.py  conftest.py  test_build_examples.py  test_golden.py  test_helpers_units.py  test_integration.py  test_reverse.py  test_smoke.py  test_visitor_units.py
tests/golden/: md_admonitions.fp.txt  md_basic.fp.txt  md_code.fp.txt  md_images.fp.txt  md_links.fp.txt  md_lists.fp.txt  md_math.fp.txt  md_mixed.fp.txt  md_showcase.fp.txt  md_tables.fp.txt  md_tasklist.fp.txt  sample_1.fp.txt  sample_2.fp.txt  sample_3.fp.txt  sample_4.fp.txt  sample_5.fp.txt  sample_6.fp.txt  sample_autodoc.fp.txt  sample_multi_output__ReportA.fp.txt  sample_multi_output__ReportB.fp.txt  sample_nested_toctree.fp.txt
tools/: roundtrip.py
